--- a/app/src/main/res/layout/activity_edit_ft.xml
+++ b/app/src/main/res/layout/activity_edit_ft.xml
@@ -14,7 +14,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:paddingBottom="20dp" />
+        android:paddingBottom="20dp"
+        android:src="@drawable/photo" />
 
     <EditText
         android:layout_width="match_parent"
@@ -47,18 +48,5 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_horizontal">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/buttonSave"
-            android:id="@+id/btnSave"
-            android:gravity="center_horizontal" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/buttonDelete"
-            android:id="@+id/btnDelete"
-            android:gravity="center_horizontal" />
     </LinearLayout>
 </LinearLayout>
