--- a/app/src/main/res/layout/activity_new_ft.xml
+++ b/app/src/main/res/layout/activity_new_ft.xml
@@ -19,10 +19,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gallery"
-        android:id="@+id/btnGallery"
-        android:layout_gravity="center_horizontal"
-        android:onClick="imageGallery" />
+        android:text="Take Image"
+        android:id="@+id/btnCamera"
+        android:layout_gravity="center_horizontal" />
 
     <EditText
         android:layout_width="fill_parent"
@@ -51,8 +50,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/buttonCreate"
+        android:text="Create Result"
         android:id="@+id/btnCreate"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="createResult" />
 
 </LinearLayout>
