--- a/app/src/main/res/layout/activity_new_ft.xml
+++ b/app/src/main/res/layout/activity_new_ft.xml
@@ -14,12 +14,12 @@
         android:id="@+id/ivPhoto"
         android:layout_gravity="center_horizontal"
         android:paddingBottom="20dp"
-        android:src="@drawable/pp" />
+        android:src="@drawable/photo" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Take Image"
+        android:text="Ambil Gambar"
         android:id="@+id/btnCamera"
         android:layout_gravity="center_horizontal" />
 
@@ -27,7 +27,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etName"
-        android:hint="@string/editTextFoodName"
+        android:hint="Nama Makanan"
         android:textSize="20dp"
         android:singleLine="true" />
 
@@ -36,21 +36,23 @@
         android:layout_height="wrap_content"
         android:id="@+id/etReagent"
         android:textSize="20dp"
-        android:hint="@string/editTextReagent"
+        android:hint="Reagen"
         android:singleLine="true" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/etResult"
-        android:hint="@string/editTextResult"
+        android:hint="Hasil"
         android:textSize="20dp"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:inputType="none"
+        android:editable="false" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create Result"
+        android:text="Lihat Hasil"
         android:id="@+id/btnCreate"
         android:layout_gravity="center_horizontal"
         android:onClick="createResult" />
