--- a/app/src/main/res/layout/activity_edit_ft.xml
+++ b/app/src/main/res/layout/activity_edit_ft.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.ahmadfauzi.testconnect.EditFTActivity">
+    tools:context="com.example.ahmadfauzi.testconnect.EditFoodTestActivity">
 
     <ImageView
         android:layout_width="150dp"
