--- a/app/src/main/res/layout/activity_new_ft.xml
+++ b/app/src/main/res/layout/activity_new_ft.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.ahmadfauzi.testconnect.NewFTActivity"
+    tools:context="com.example.ahmadfauzi.testconnect.NewFoodTestActivity"
     android:weightSum="1">
 
     <ImageView
@@ -55,6 +55,6 @@
         android:text="Lihat Hasil"
         android:id="@+id/btnCreate"
         android:layout_gravity="center_horizontal"
-        android:onClick="createResult" />
+         />
 
 </LinearLayout>
