--- a/app/src/main/res/layout/activity_new_ft.xml
+++ b/app/src/main/res/layout/activity_new_ft.xml
@@ -1,60 +1,75 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.ahmadfauzi.testconnect.NewFoodTestActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context="com.example.ahmadfauzi.testconnect.activities.NewFoodTestActivity">
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:id="@+id/ivPhoto"
-        android:layout_gravity="center_horizontal"
-        android:paddingBottom="20dp"
-        android:src="@drawable/photo" />
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Ambil Gambar"
-        android:id="@+id/btnCamera"
-        android:layout_gravity="center_horizontal" />
-
-    <EditText
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etName"
-        android:hint="Nama Makanan"
-        android:textSize="20dp"
-        android:singleLine="true" />
+        android:layout_height="fill_parent"
+        android:layout_below="@id/app_bar"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:weightSum="1">
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etReagent"
-        android:textSize="20dp"
-        android:hint="Reagen"
-        android:singleLine="true" />
+        <ImageView
+            android:id="@+id/ivPhoto"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_below="@id/app_bar"
+            android:paddingBottom="20dp"
+            android:src="@drawable/photo" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etResult"
-        android:hint="Hasil"
-        android:textSize="20dp"
-        android:singleLine="true"
-        android:inputType="none"
-        android:editable="false" />
+        <Button
+            android:id="@+id/btnCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/buttonAmbilGambar" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Lihat Hasil"
-        android:id="@+id/btnCreate"
-        android:layout_gravity="center_horizontal"
-         />
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/editTextFoodName"
+            android:singleLine="true"
+            android:textColor="#424242"
+            android:textSize="20sp"
+            android:layout_marginTop="4dp" />
+
+        <Spinner
+            android:id="@+id/spinnerReagen"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="2dp" />
+
+        <TextView
+            android:id="@+id/tvResult"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/textViewResult"
+            android:textSize="20sp"
+            android:textColor="#424242"
+            android:layout_marginTop="4dp"
+            android:layout_marginLeft="2dp" />
+
+        <Button
+            android:id="@+id/btnCreate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/buttonResult"
+            android:layout_marginTop="16dp" />
+    </LinearLayout>
 
 </LinearLayout>
