--- a/app/src/main/res/layout/item_foodtest.xml
+++ b/app/src/main/res/layout/item_foodtest.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:textColor="#424242"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
@@ -32,6 +33,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
+                android:textColor="#424242"
                 android:id="@+id/tvName"
                 android:textSize="20dp"
                 android:textIsSelectable="false"
@@ -43,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
+                android:textColor="#424242"
                 android:id="@+id/tvReagent"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20dp" />
@@ -52,11 +55,10 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:text="Medium Text"
+                android:textColor="#424242"
                 android:id="@+id/tvResult"
                 android:layout_gravity="center_horizontal"
                 android:textSize="20dp" />
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
