--- a/app/src/main/res/menu/menu_dashboard.xml
+++ b/app/src/main/res/menu/menu_dashboard.xml
@@ -1,15 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.ahmadfauzi.testconnect.dashboard.DashboardActivity">
-    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
-        <!--android:orderInCategory="100" app:showAsAction="never" />-->
+    tools:context="com.example.ahmadfauzi.testconnect.activities.DashboardActivity">
 
     <item
-        android:id="@+id/action_add"
+        android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:icon="@drawable/ic_action_new"
-        app:showAsAction="always"
-        android:title="addItem"
-        />
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
+
 </menu>
