--- a/app/src/main/res/layout/activity_new_ft.xml
+++ b/app/src/main/res/layout/activity_new_ft.xml
@@ -47,7 +47,7 @@
             android:layout_marginTop="4dp" />
 
         <Spinner
-            android:id="@+id/spinnerReagen"
+            android:id="@+id/spinnerTestType"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
